Explicitly check for COLOR and AUTO color modes with CUPS
Categories
(Core :: Printing: Setup, defect, P1)
Tracking
()
People
(Reporter: alaskanemily, Assigned: alaskanemily)
References
Details
(Whiteboard: [print2020_v81])
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This may fix bug 1660658. In any case, I don't see any special processing in cupsCheckDestSupported
to consider CUPS_PRINT_COLOR_MODE_COLOR
to be a subset of CUPS_PRINT_COLOR_MODE_AUTO
, consider color to be supported if auto is supported.
Assignee | ||
Comment 1•4 years ago
|
||
This may fix bug 1660658. It's pretty harmless if it turns out to be redundant
to make this check.
Pushed by emcdonough@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/35664ccb8c1b Check for both CUPS_PRINT_COLOR_MODE_COLOR and CUPS_PRINT_COLOR_MODE_AUTO for CUPS color printing support. r=nordzilla
Comment 4•4 years ago
|
||
As of build 20200828153126:
There is no print preview option
Ubuntu 16.04- the print option does appear in color. The color/b&w selection item is greyed out with color mode "blank and white" selected. A print is in color, the about:config variable print.print_in_color remains TRUE
Ubuntu 18.04 - same as 16.04 except, the color/b&w selection item is operable.
Comment 5•4 years ago
|
||
bugherder |
Comment 6•4 years ago
|
||
Reminder to request Beta uplift.
Updated•4 years ago
|
Assignee | ||
Comment 7•4 years ago
|
||
Comment on attachment 9172761 [details]
Bug 1661785 - Check for both CUPS_PRINT_COLOR_MODE_COLOR and CUPS_PRINT_COLOR_MODE_AUTO for CUPS color printing support.
Beta/Release Uplift Approval Request
- User impact if declined: Color print preview on non-Windows platforms might be unavailable for certain printers
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The patch is very self-contained, and all further print preview work is being tested with it already in place.
- String changes made/needed:
Comment 8•4 years ago
|
||
Comment on attachment 9172761 [details]
Bug 1661785 - Check for both CUPS_PRINT_COLOR_MODE_COLOR and CUPS_PRINT_COLOR_MODE_AUTO for CUPS color printing support.
Approved for 81.0b5.
Comment 9•4 years ago
|
||
bugherder uplift |
Comment 10•4 years ago
|
||
Something just changed in Firefox nightly as of build 20200831215215. The problem I reported as bug 1660658 is back.
Comment 11•3 years ago
|
||
(In reply to Lee McFarland from comment #10)
Something just changed in Firefox nightly as of build 20200831215215. The problem I reported as bug 1660658 is back.
Conversation continued at bug 1660658 comment 24.
Description
•