Bug 1661785 - Check for both CUPS_PRINT_COLOR_MODE_COLOR and CUPS_PRINT_COLOR_MODE_AUTO for CUPS color printing support. r=nordzilla

This may fix bug 1660658. It's pretty harmless if it turns out to be redundant
to make this check.

Differential Revision: https://phabricator.services.mozilla.com/D88654